docs(session): Calvin M0-Go closed — the floor not established at A2 (T < O three times; $18.93 of $30); BUILDLOG, the handoff rewritten, CLAUDE status and read-next row, README status and design-docs table
The 2026-09-11 BUILDLOG entry: WP-0 to WP-10 with each exit, Max's
decisions, 0.1.11-beta to 0.1.14-beta and C-102 to C-114, the residual's
path across the re-tests (NULL new, then declared in the wrong world,
then declared in the right world and not compiled), the round closed on
Max's word at $18.93 of $30, the disk sweep, and the findings for Max.
The handoff's resume point: M0-Go closed; the next protocol step (build
errors into the one declaration repair, the sibling whole, read on fresh
keys with O re-run) named and held, ADR-106 on accepted; the 2026-09-10
items still waiting carried forward; restart the knowledge server
(image at 0.1.14-beta, C-65).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Bo8eBnkBwwgy16x7E7gwzp